--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import funciones"
+    "import funciones\n",
+    "\n"
    ]
   },
   {
