--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -35,13 +35,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "260b913f-d6d3-47b8-9431-7a64d6d037a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  0., -1.],\n",
+       "       [ 0.,  0., -4.,  0.],\n",
+       "       [-2.,  1.,  1.,  2.],\n",
+       "       [ 3., -3.,  0.,  2.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import funciones\n",
-    "\n"
+    "from funciones import inversaLU, calcularPLU, solve_LU, descompPLU\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[1, -1, 0, 1], [0, 1, 4, 0], [2, -1, 0, -2], [-3, 3, 0, -1]])\n",
+    "rows, cols = A.shape\n",
+    "id = np.eye(rows, cols)\n",
+    "\n",
+    "leontief= id - A\n",
+    "# res = descompPLU(leontief)\n",
+    "# L, U\n",
+    "# leontief\n",
+    "leontief"
    ]
   },
   {
@@ -53,12 +77,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a063ee90",
+   "metadata": {},
+   "source": [
+    "### Consigna 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "07f69bd8-9a22-4fa0-8e69-7e2580e80459",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1829.78723404, -1106.38297872,  6489.36170213])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[0.3, 0.0, 0.1],[0.05, 1.0, 0.2],[0.1, 0.15, 0.1]])\n",
+    "d = np.array([100,100,300])\n",
+    "\n",
+    "L, U = calcularLU(A)\n",
+    "x = solve_LU(L,U,d)\n",
+    "x"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
