--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -16,26 +16,31 @@
    "id": "11f7face-a325-4e30-b13e-0c3d84280c5e",
    "metadata": {},
    "source": [
-    "### Consigna 1 - "
+    "### Consigna 1"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e69c407d-9132-421c-8d02-508da3bb3ae6",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Ecuacion\n",
+    "$$p = (I-A)^{-1}d = Ld$$\n",
+    "\n",
+    "Si $d = 0$ entonce $p = 0$  ??\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6ea60699-4c07-40fb-8f71-ec4cacf32708",
    "metadata": {},
    "source": [
-    "### Consigna 2 -  "
+    "### Consigna 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "260b913f-d6d3-47b8-9431-7a64d6d037a5",
    "metadata": {},
    "outputs": [
@@ -48,24 +53,14 @@
        "       [ 3., -3.,  0.,  2.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from funciones import inversaLU, calcularPLU, solve_LU, descompPLU\n",
-    "import numpy as np\n",
-    "\n",
-    "A = np.array([[1, -1, 0, 1], [0, 1, 4, 0], [2, -1, 0, -2], [-3, 3, 0, -1]])\n",
-    "rows, cols = A.shape\n",
-    "id = np.eye(rows, cols)\n",
-    "\n",
-    "leontief= id - A\n",
-    "# res = descompPLU(leontief)\n",
-    "# L, U\n",
-    "# leontief\n",
-    "leontief"
+    "from funciones import inversaLU, calcularPLU, solve_LU, calcularLU, inversaLUpivot\n",
+    "import numpy as np"
    ]
   },
   {
@@ -93,7 +88,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-1829.78723404, -1106.38297872,  6489.36170213])"
+       "array([   64.03940887, -5305.41871921,  -551.72413793])"
       ]
      },
      "execution_count": 6,
@@ -104,18 +99,89 @@
    "source": [
     "A = np.array([[0.3, 0.0, 0.1],[0.05, 1.0, 0.2],[0.1, 0.15, 0.1]])\n",
     "d = np.array([100,100,300])\n",
+    "rows,cols = A.shape\n",
+    "id = np.eye(rows, cols)\n",
+    "i_A = id - A\n",
+    "L, U, P= calcularPLU(i_A)\n",
+    "leontief = inversaLUpivot(L,U,P)\n",
     "\n",
-    "L, U = calcularLU(A)\n",
-    "x = solve_LU(L,U,d)\n",
-    "x"
+    "p = leontief @ d\n",
+    "p"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19403a3c-422b-4bdb-85b3-058b90560067",
+   "id": "8067f546",
    "metadata": {},
    "source": [
-    "---"
+    "a) Como el producto 2 necesita 1 producto 2 para uno, mas los gasto de los demas productos nunca llega a satisfacer la demanda por ende so produccion total es negativa\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c76c5de6",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Consigna 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2d2cd6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   64.03940887, -5312.08538588,  -551.72413793])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta_d = d + np.array([0,0,1])\n",
+    "delta_p = leontief @ delta_d\n",
+    "delta_p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb902a5",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Consigna 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8c86f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z = np.array([[350, 0, 0],[50, 250, 150],[200, 150, 550]])\n",
+    "rows, cols = Z.shape\n",
+    "P = np.array([[1000,0,0],[0,500,0],[0,0,1000]])\n",
+    "\n",
+    "A = Z @ inversaLU(*calcularLU(P))\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cfbc03d",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Consigna 6"
    ]
   }
  ],
@@ -135,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
