--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -40,22 +40,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "260b913f-d6d3-47b8-9431-7a64d6d037a5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  1.,  0., -1.],\n",
-       "       [ 0.,  0., -4.,  0.],\n",
-       "       [-2.,  1.,  1.,  2.],\n",
-       "       [ 3., -3.,  0.,  2.]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  1.  0. -1.]\n",
+      " [ 0.  0. -4.  0.]\n",
+      " [-2.  1.  1.  2.]\n",
+      " [ 3. -3.  0.  2.]]\n",
+      "[[ 1.     0.     0.     0.   ]\n",
+      " [-0.     1.     0.     0.   ]\n",
+      " [-0.     0.     1.     0.   ]\n",
+      " [-1.5   -1.5   -0.375  1.   ]]\n",
+      "[[-2.   1.   1.   2. ]\n",
+      " [ 0.   1.   0.  -1. ]\n",
+      " [ 0.   0.  -4.   0. ]\n",
+      " [ 0.   0.   0.   3.5]]\n",
+      "[[0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1.]]\n",
+      "A permutada:\n",
+      " [[-2.  1.  1.  2.]\n",
+      " [ 0.  1.  0. -1.]\n",
+      " [ 0.  0. -4.  0.]\n",
+      " [ 3. -3.  0.  2.]]\n",
+      "[[0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1.]]\n",
+      "A permutada inversa: \n",
+      " [[ 0.14285714  1.14285714  0.03571429  0.42857143]\n",
+      " [ 0.42857143  1.42857143  0.10714286  0.28571429]\n",
+      " [-0.         -0.         -0.25       -0.        ]\n",
+      " [ 0.42857143  0.42857143  0.10714286  0.28571429]]\n",
+      "A inversa: \n",
+      " [[ 1.14285714  0.03571429  0.14285714  0.42857143]\n",
+      " [ 1.42857143  0.10714286  0.42857143  0.28571429]\n",
+      " [ 0.         -0.25        0.          0.        ]\n",
+      " [ 0.42857143  0.10714286  0.42857143  0.28571429]]\n",
+      "Leontief:\n",
+      " [[ 1.14285714  0.03571429  0.14285714  0.42857143]\n",
+      " [ 1.42857143  0.10714286  0.42857143  0.28571429]\n",
+      " [-0.         -0.25       -0.         -0.        ]\n",
+      " [ 0.42857143  0.10714286  0.42857143  0.28571429]]\n"
+     ]
     }
    ],
    "source": [
@@ -162,17 +195,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5f8c86f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.35 0.   0.  ]\n",
+      " [0.05 0.5  0.15]\n",
+      " [0.2  0.3  0.55]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.53846154, 0.        , 0.        ],\n",
+       "       [0.44871795, 2.5       , 0.83333333],\n",
+       "       [0.98290598, 1.66666667, 2.77777778]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Z = np.array([[350, 0, 0],[50, 250, 150],[200, 150, 550]])\n",
     "rows, cols = Z.shape\n",
     "P = np.array([[1000,0,0],[0,500,0],[0,0,1000]])\n",
     "\n",
     "A = Z @ inversaLU(*calcularLU(P))\n",
-    "A"
+    "i_A = np.eye(rows, cols) - A\n",
+    "leontief = inversaLUpivot(*calcularPLU(i_A))\n",
+    "print(A)\n",
+    "leontief "
    ]
   },
   {
