--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -27,7 +27,19 @@
     "##### Ecuacion\n",
     "$$p = (I-A)^{-1}d = Ld$$\n",
     "\n",
-    "Si $d = 0$ entonce $p = 0$  ??\n"
+    "Si $d = 0$ entonce $p = 0$  ??\n",
+    "\n",
+    "##### a) \n",
+    "Cuando $ (I-A) $ es inversible la matriz de Leontief se puede calcular. En este caso la solucion al sistema 2 existe y es unica.\n",
+    "\n",
+    "##### b) \n",
+    "Cuando $ (I-A) $ es inversible pero el vector d = 0 tenemos una economia cerrada en donde para toda matriz de Leontief el valor de p va a ser 0.\n",
+    "\n",
+    "##### c) \n",
+    "Cuando $ (I-A) $ no es inversible significa que el sistema no tiene solucion unica o no tiene solucion.\n",
+    "\n",
+    "##### d) \n",
+    "Cuando $ (I-A) $ no es inversible y d = 0 el sistema se puede reducir a $ (I-A)p = 0 $ el cual posee soluciones no triviales por lo tanto hay soluciones infinitas que satisfacen la ecuacion.\n"
    ]
   },
   {
@@ -147,7 +159,7 @@
    "id": "8067f546",
    "metadata": {},
    "source": [
-    "a) Como el producto 2 necesita 1 producto 2 para uno, mas los gasto de los demas productos nunca llega a satisfacer la demanda por ende so produccion total es negativa\n"
+    "a) Como el producto 2 necesita 1 producto 2 para producirse uno, ademas de los gastos de los demas productos nunca llega a satisfacer la demanda por ende so produccion total es negativa (creo que aca no estamos viendo bien a la matriz de la demanda interna la cual deberia ser la matriz de leontief y no la matriz A, lo que me llama la atencion es que nos esta viniendo con valores negativos cuando la demanda deberia ser positiva?)\n"
    ]
   },
   {
