--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -262,7 +262,7 @@
     "\n",
     "\n",
     "\n",
-    "Lo que queremos lograr es deducir cómo varía la producción $p^r$ en función de una variación en la demanda, fijsndo el que no hay cambios en la demanda de la región $s$ (es decir, $\\Delta d^s = 0$). Vamos a descomponer el problema para deducir la fórmula $\\Delta p^r = (I - A^{rr} - A^{rs}(I - A^{ss})^{-1}A^{sr})^{-1}\\Delta d^r$.\n",
+    "Lo que queremos lograr es deducir cómo varía la producción $p^r$ en función de una variación en la demanda, fijando el que no hay cambios en la demanda de la región $s$ (es decir, $\\Delta d^s = 0$). Vamos a descomponer el problema para deducir la fórmula $\\Delta p^r = (I - A^{rr} - A^{rs}(I - A^{ss})^{-1}A^{sr})^{-1}\\Delta d^r$.\n",
     "\n",
     "#### Empezamos a partir de la ecuación matricial de la fórmula 4\n",
     "\n",
@@ -322,7 +322,7 @@
     "\n",
     "$$(I - A^{rr} - A^{rs}(I - A^{ss})^{-1}A^{sr})p^r = d^r$$\n",
     "\n",
-    "## Variación de la demanda\n",
+    "#### Variación de la demanda\n",
     "\n",
     "Si ahora consideramos una variación en la demanda $\\Delta d^r$, la ecuación queda:\n",
     "\n",
