--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -307,7 +307,7 @@
    "id": "5b55f117",
    "metadata": {},
    "source": [
-    "b)"
+    "b) Matrices de Insumo Producto de cada pais"
    ]
   },
   {
@@ -387,7 +387,7 @@
    "id": "ef88993d",
    "metadata": {},
    "source": [
-    "c)"
+    "c) Matrices de coeficientes tecnicos de cada pais"
    ]
   },
   {
@@ -402,6 +402,14 @@
     "\n",
     "col_intra_A = calcular_coeficientes_tecnicos(col_intra_regional, col_matriz_P)\n",
     "col_inter_A = calcular_coeficientes_tecnicos(col_inter_regional, bol_matriz_P)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89cd8764",
+   "metadata": {},
+   "source": [
+    "Calculamos las demandas externasde cada pais"
    ]
   },
   {
