--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "260b913f-d6d3-47b8-9431-7a64d6d037a5",
    "metadata": {},
    "outputs": [],
@@ -73,32 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "07f69bd8-9a22-4fa0-8e69-7e2580e80459",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([   64.03940887, -5305.41871921,  -551.72413793])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Produccion total de cada producto:\n",
+      "p = (64.03940886699509,-5305.418719211823,-551.7241379310345)\n"
+     ]
     }
    ],
    "source": [
-    "A = np.array([[0.3, 0.0, 0.1],[0.05, 1.0, 0.2],[0.1, 0.15, 0.1]])\n",
+    "A = np.array([[0.3, 0.0, 0.1],[0.05, 1, 0.2],[0.1, 0.15, 0.1]])\n",
     "d = np.array([100,100,300])\n",
+    "\n",
     "rows,cols = A.shape\n",
     "id = np.eye(rows, cols)\n",
     "i_A = id - A\n",
-    "L, U, P= calcularPLU(i_A)\n",
+    "L, U, P = calcularPLU(i_A)\n",
     "leontief = inversaLUpivot(L,U,P)\n",
     "\n",
     "p = leontief @ d\n",
-    "p"
+    "print(\"Produccion total de cada producto:\")\n",
+    "print(f\"p = ({p[0]},{p[1]},{p[2]})\")"
    ]
   },
   {
@@ -106,7 +106,9 @@
    "id": "8067f546",
    "metadata": {},
    "source": [
-    "a) Como el producto 2 necesita 1 producto 2 para producirse uno, ademas de los gastos de los demas productos nunca llega a satisfacer la demanda por ende so produccion total es negativa (creo que aca no estamos viendo bien a la matriz de la demanda interna la cual deberia ser la matriz de leontief y no la matriz A, lo que me llama la atencion es que nos esta viniendo con valores negativos cuando la demanda deberia ser positiva?)\n"
+    "a. Como el producto 2 necesita una unidad del producto 2 para producir otra unidad del producto 2, no puede dar abasto a demanda interna y externa al mismo tiempo, por lo que su producción total decae, lo que refleja el valor negativo en el vector p. Esto afecta a cualquiera de los productos que dependan de este, ya que si un insumo escasea, la producción de los productos que dependan de este también se verá afectada. Por lo tanto, la producción del producto 3 también es negativa, pero el producto 1, al no necesitar del producto 2, no ve afectada negativamente su producción total.\n",
+    "\n",
+    "b. El valor 1 en la diagonal correspondiente a lo que necesita el producto 2 del producto 2 es lo que genera una produccion negativa y por esa razon esta matriz genera los resultados obtenidos"
    ]
   },
   {
@@ -121,25 +123,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "2d2cd6f8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([   64.03940887, -5312.08538588,  -551.72413793])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diferencia en la produccion de cada producto al aumentar la demanda por un Δd dado:\n",
+      "Δp = (0.0,-6.66666666666697,0.0)\n"
+     ]
     }
    ],
    "source": [
-    "delta_d = d + np.array([0,0,1])\n",
-    "delta_p = leontief @ delta_d\n",
-    "delta_p"
+    "delta_d = np.array([0,0,1])\n",
+    "d_prima = d + delta_d\n",
+    "p_prima = leontief @ d_prima\n",
+    "delta_p = p_prima - p \n",
+    "\n",
+    "print(\"Diferencia en la produccion de cada producto al aumentar la demanda por un Δd dado:\")\n",
+    "print(f\"Δp = ({delta_p[0]},{delta_p[1]},{delta_p[2]})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51df0cd1",
+   "metadata": {},
+   "source": [
+    "Se puede observar que al aumentar la demanda externa del producto 3, por lo explicado en el punto 3.a, se necesitara aun mas insumos del producto, lo que se traduce en la diferencia de produccion unicamente en el producto 2, que al no poder satisfacerla, pasa a ser negativa."
    ]
   },
   {
@@ -154,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "5f8c86f9",
    "metadata": {},
    "outputs": [
@@ -162,22 +174,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Coeficientes tecnicos de la matriz A:\n",
       "[[0.35 0.   0.  ]\n",
       " [0.05 0.5  0.15]\n",
-      " [0.2  0.3  0.55]]\n"
+      " [0.2  0.3  0.55]]\n",
+      "\n",
+      "Matriz de Leontief asociada a la matriz A:\n",
+      "[[1.53846154 0.         0.        ]\n",
+      " [0.44871795 2.5        0.83333333]\n",
+      " [0.98290598 1.66666667 2.77777778]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.53846154, 0.        , 0.        ],\n",
-       "       [0.44871795, 2.5       , 0.83333333],\n",
-       "       [0.98290598, 1.66666667, 2.77777778]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -188,8 +194,10 @@
     "A = calcular_coeficientes_tecnicos(Z,P)\n",
     "i_A = np.eye(rows, cols) - A\n",
     "leontief = inversaLUpivot(*calcularPLU(i_A))\n",
+    "print(\"Coeficientes tecnicos de la matriz A:\")\n",
     "print(A)\n",
-    "leontief "
+    "print(\"\\nMatriz de Leontief asociada a la matriz A:\")\n",
+    "print(leontief) "
    ]
   },
   {
@@ -608,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
