--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -258,9 +258,9 @@
     "\n",
     "Descomponemos esta expresión en dos ecuaciones que corresponden a cada bloque:\n",
     "\n",
-    "$$(I_{n\\times n} \\quad 0_{n\\times m}) - (A^{rr} \\quad A^{rs})\\begin{pmatrix}p^r \\\\ p^s\\end{pmatrix} = d^r$$\n",
+    "$$((I_{n\\times n} \\quad 0_{n\\times m}) - (A^{rr} \\quad A^{rs}))\\begin{pmatrix}p^r \\\\ p^s\\end{pmatrix} = d^r$$\n",
     "\n",
-    "$$(0_{m\\times n} \\quad I_{m\\times m}) - (A^{sr} \\quad A^{ss})\\begin{pmatrix}p^r \\\\ p^s\\end{pmatrix} = d^s$$\n",
+    "$$((0_{m\\times n} \\quad I_{m\\times m}) - (A^{sr} \\quad A^{ss}))\\begin{pmatrix}p^r \\\\ p^s\\end{pmatrix} = d^s$$\n",
     "\n",
     "Estas ecuaciones se pueden reescribir como:\n",
     "\n",
@@ -270,29 +270,41 @@
     "2. Para la región $s$:\n",
     "   $$-A^{sr}p^r + (I - A^{ss})p^s = d^s$$\n",
     "\n",
+    "Con estas expresiones consideramos ahora que sucede cuando se presenta una variación en la demanda $d^r$. Esta variación puede impactar sobre $p^s$ y $p^r$ por lo tanto tendremos en cuenta a los valores de  $d^{r'}, p^{r'}$ y $p^{s'}$. El valor de $d^{s'}$ es igual a $d^{s}$ ya que sabemos que $\\Delta d^s = 0$.\n",
+    "\n",
+    "#### Restamos las ecuaciones anteriores con las ecuaciones perturbadas\n",
+    "\n",
+    "1. Para la región $r$:\n",
+    "   $$(I - A^{rr})(p^r - p^{r'}) - A^{rs}(p^s - p^{s'}) = d^r - d^{r'}$$\n",
     "\n",
     "\n",
-    "####  Resolvemos la ecuación para $p^s$ y sustituimos $p^s$ en la ecuación de la región $r$\n",
+    "2. Para la región $s$:\n",
+    "   $$-A^{sr}(p^r - p^{r'}) + (I - A^{ss})(p^s - p^{s'}) = d^s - d^{s}$$\n",
     "\n",
-    "Como sabemos que $\\Delta d^s = 0$  podemos resolver para $p^s$ en la segunda ecuación:\n",
+    "Ahora las reescribimos de la siguiente manera\n",
     "\n",
-    "$$(I - A^{ss})p^s = A^{sr}p^r$$\n",
+    "1. Para la región $r$:\n",
+    "   $$(I - A^{rr})\\Delta p^r - A^{rs}\\Delta p^s = \\Delta d^r$$\n",
     "\n",
-    "Despejando $p^s$:\n",
     "\n",
-    "$$p^s = (I - A^{ss})^{-1}A^{sr}p^r$$\n",
+    "2. Para la región $s$:\n",
+    "   $$-A^{sr}\\Delta p^r + (I - A^{ss})\\Delta p^s = 0$$\n",
     "\n",
-    "Ahora reemplazamos esta expresión de $p^s$ en la primera ecuación para la región $r$:\n",
+    "####  Resolvemos la ecuación para $\\Delta p^s$ y sustituimos $\\Delta p^s$ en la ecuación de la región $r$\n",
     "\n",
-    "$$(I - A^{rr})p^r - A^{rs}(I - A^{ss})^{-1}A^{sr}p^r = d^r$$\n",
+    "Podemos despejar para $\\Delta p^s$ en la segunda ecuación:\n",
     "\n",
-    "Factorizamos $p^r$ en el lado izquierdo de la ecuación:\n",
+    "$$(I - A^{ss})\\Delta p^s = A^{sr}\\Delta p^r$$\n",
     "\n",
-    "$$(I - A^{rr} - A^{rs}(I - A^{ss})^{-1}A^{sr})p^r = d^r$$\n",
+    "Despejando $p^s$ y suponiendo que $(I- A^{ss})$ es inversible:\n",
     "\n",
-    "#### Variación de la demanda\n",
+    "$$\\Delta p^s = (I - A^{ss})^{-1}A^{sr}\\Delta p^r$$\n",
     "\n",
-    "Si ahora consideramos una variación en la demanda $\\Delta d^r$, la ecuación queda:\n",
+    "#### Reemplazamos esta expresión de $\\Delta p^s$ en la primera ecuación para la región $r$\n",
+    "\n",
+    "$$(I - A^{rr})\\Delta p^r - A^{rs}(I - A^{ss})^{-1}A^{sr}\\Delta p^r = \\Delta d^r$$\n",
+    "\n",
+    "Factorizamos $\\Delta p^r$:\n",
     "\n",
     "$$(I - A^{rr} - A^{rs}(I - A^{ss})^{-1}A^{sr})\\Delta p^r = \\Delta d^r$$\n",
     "\n",
@@ -321,10 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ad1c3dc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmatrizlatina2011_compressed_0.xlsx\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 2\u001b[0m dataset \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_excel(path, sheet_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "path = \"matrizlatina2011_compressed_0.xlsx\"\n",
     "dataset = pd.read_excel(path, sheet_name=1)"
@@ -644,7 +668,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -658,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
