--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -142,6 +142,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3fb6ca8",
+   "metadata": {},
+   "source": [
+    "En el modelo de insumo-producto de Leontief, el vector de producción 𝑝 necesario para satisfacer tanto la demanda interna como la externa se determina mediante la siguiente ecuación:\n",
+    "$$p = (I-A)^{-1}d$$\n",
+    "\n",
+    "Donde\n",
+    "- A es la matriz insumo-producto\n",
+    "- I es la matriz identidad\n",
+    "- d es el vector de demanda\n",
+    "\n",
+    "Supongamos que hay un cambio en la demanda externa del producto 3, representado por el vector columna $\\Delta d = \n",
+    "\\begin{pmatrix}\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "1\n",
+    "\\end{pmatrix}$\n",
+    "Para determinar el cambio correspondiente en la producción, $\\Delta p$ calculamos el nuevo vector de producción p' de la siguiente manera:\n",
+    "$$p' = (I-A)^{-1}d'$$\n",
+    "\n",
+    "Restamos a p y p' y finalmente obtenemos:\n",
+    "$$\\Delta p = p' - p = (I - A)^{-1} d' - (I - A)^{-1} d = (I - A)^{-1} (d' - d) = (I - A)^{-1} \\Delta d$$\n",
+    "\n",
+    "Dado que $ \\Delta d = \\begin{pmatrix} 0 \\\\ 0 \\\\ 1 \\end{pmatrix} $, el producto $ (I - A)^{-1} \\Delta d$ nos da la tercera columna de la matriz de Leontief. Esta columna representa la variación en la producción de todos los sectores que es necesario para satisfacer un incremento de una unidad en la demanda del producto 3."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "2d2cd6f8",
