correccion typo punto 7

--- a/template-alumnos/grupo_XX_TP1.ipynb
+++ b/template-alumnos/grupo_XX_TP1.ipynb
@@ -572,7 +572,7 @@
     "plt.barh(range(len(sectores)), col_d_rs)\n",
     "plt.yticks(range(len(sectores)), sectores, fontsize=8)\n",
     "plt.xlabel('Demanda externa (millones de USD)')\n",
-    "plt.title('Demanda externa de cada sector en Bolivia')\n",
+    "plt.title('Demanda externa de cada sector en Colombia')\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
